Plates to weight: fixing alignment issues with a page-specific stylesheet.

--- a/platesToWeightCalculator/styles.css
+++ b/platesToWeightCalculator/styles.css
@@ -1,51 +1,10 @@
-body {
-  font-family: "open sans", Verdana, arial, sans-serif;
-  color: #444;
-  margin: 0;
-  background-color: #f6f6f6;
-}
-
-h1 {
-  font-size: 2.2rem;
-  font-family: "open sans", sans-serif;
-  margin-top: 0;
-  margin-left: 2px;
-  margin: 0 10px 0 10px;
-}
-
 div {
-  margin-bottom: 0.3em;
-}
-
-input {
-  width: auto;
-  border: 1px solid gray;
-}
-
-.numberInput {
-  /*height: 1.2em;*/
-  height: 1.5em;
-  margin: 0em 0em 0.19em 0em;
-}
-
-label {
-  height: 1.4em;
+  margin-bottom: 0.5em;
 }
 
 input[type="button"] {
-  /*height: 1.5em;*/
-  margin: 0.015em 1em 0.192em 0em;
+  height: 1.5em;
+  margin: 0em 0em 0em 0.7em;
   padding: 0em 1em 0em 1em;
-  /*vertical-align: top;*/
+  vertical-align: bottom;
 }
-
-/* Firefox */
-input[type="number"] {
-  appearance: textfield;
-}
-
-/* Webkit 
-input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
-*/
